2007-05-22  David Bateman  <dbateman@free.fr>

	* pkg/pkg.m: Use rethrow(lasterror()) throughout rather than
	error(lasterr()(8:end)).
	(pkg:install): Warning for empty packages being removed. Suppress
	spurious output. Warning rather than error for uninstalling a
	package that is not installed to avoid RPM issue.
	(pkg:configure_make): Fix for parsing of src/FILES. Don't create
	inst or architecture dependent directory if it exists.

2007-05-22  Thomas Weber  <thomas.weber.mail@gmail.com>

	* ChangeLog, control/system/is_stabilizable.m, general/bicubic.m,
	image/ind2gray.m, image/saveimage.m, plot/box.m, plot/grid.m,
	signal/freqz.m: Fix typos.

2007-05-21  David Bateman  <dbateman@free.fr>

	* pkg/pkg.m: Add rebuild target, and -local, -global option to
	force installation location.
	(rebuild): New subfunction to rebuild package database from
	installed packages. Also allows changing of autoload status
	(install): Warn use if attempting to install from non existent
	file. 
	(issuperuser): Use 'geteuid() == 0' instead of 'strcmp (getenv(
	"USER", "root"))' for root test.

2007-05-21  Michael Goffioul  <michael.goffioul@swing.be>

	* miscellaneous/copyfile.m: check for cp.exe on Windows platforms
	and replace "\" characters with "/".
	* pkg/pkg.m: Use shell rather than system throughout. Replace "\" 
	characters with "/" throughout.
	(shell): New subfunction that wraps system and is careful with the
	shell on windows platforms.
	(configure_make): Explictly pass complier etc to configure
	process.
	(issuperuser): Force default to global install for Windows machines.
	
2007-05-19  Kristan Onu

	* plot/Makefile.in (SOURCES): Remove hbar.m and add barh.m.

2007-05-18  David Bateman  <dbateman@free.fr>

	* pkg/pkg.m (install): More verbosity. 
	(configure_make): Ditto.
	(create_pkgadddel): Install in architecture dependent directory if
	it exists to address issues with autoload/mfilename.
	(write_INDEX): Check in archiecture dependent directories as well.
